--- a/gate-out/package.json
+++ b/gate-out/package.json
@@ -11,8 +11,7 @@
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.4.2"
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +39,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5"
   }
-} 
+}
