--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/lab": "^5.0.0-alpha.169",
+    "@mui/material": "^5.15.14",
     "@mui/x-data-grid": "^6.19.4",
-    "@mui/x-date-pickers": "^6.18.6",
+    "@mui/x-date-pickers": "^6.19.4",
     "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/axios": "^0.9.36",
     "@types/recharts": "^1.8.29",
     "@types/uuid": "^9.0.8",
+    "axios": "^1.8.3",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
