--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "@types/pg": "^8.11.11",
     "@types/react": "^19.0.10",
     "@types/react-router-dom": "^5.3.3",
     "idb": "^8.0.2",
     "jspdf": "^3.0.0",
+    "pg": "^8.14.0",
     "react-router-dom": "^7.3.0",
     "socket.io-client": "^4.8.1",
     "tesseract.js": "^4.1.1",
