--- a/server/.env
+++ b/server/.env
@@ -6,11 +6,11 @@ NODE_ENV=development
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=root
+DB_PASSWORD=postgres
 DB_NAME=parking_system
 
 # JWT Configuration
-JWT_SECRET=parking-system-secret-key-2024
+JWT_SECRET=your-secret-key
 JWT_EXPIRES_IN=24h
 
 # CORS Configuration
