--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/archiver": "^6.0.3",
     "@types/pdfkit": "^0.13.9",
+    "@types/pg": "^8.11.11",
     "@types/qrcode": "^1.5.5",
     "@types/xlsx": "^0.0.36",
     "archiver": "^7.0.1",
@@ -29,7 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.16.0",
-    "pg": "^8.11.3",
+    "pg": "^8.14.0",
     "qrcode": "^1.5.4",
     "socket.io": "^4.7.2",
     "typeorm": "^0.3.17",
