--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^19.0.10",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-webcam": "^1.1.0",
     "idb": "^8.0.2",
     "jspdf": "^3.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.14.0",
     "react-router-dom": "^7.3.0",
+    "react-webcam": "^7.2.0",
     "socket.io-client": "^4.8.1",
     "tesseract.js": "^4.1.1",
     "xlsx": "^0.18.5"
