--- a/gate-in/package.json
+++ b/gate-in/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.19",
     "@types/react-webcam": "^3.0.0",
     "axios": "^1.6.7",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
@@ -23,6 +24,7 @@
     "react-webcam": "^7.2.0",
     "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^10.0.0"
   }
 }
