--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,7 @@
     "bcryptjs": "^2.4.3",
     "canvas": "^3.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "jsbarcode": "^3.11.6",
     "jsonwebtoken": "^9.0.2",
@@ -32,8 +32,9 @@
     "pdfkit": "^0.16.0",
     "pg": "^8.14.0",
     "qrcode": "^1.5.4",
+    "reflect-metadata": "^0.2.2",
     "socket.io": "^4.7.2",
-    "typeorm": "^0.3.17",
+    "typeorm": "^0.3.21",
     "winston": "^3.11.0",
     "xlsx": "^0.18.5"
   },
