feat: Add OCR types and improve license plate detection - Add OCR type definitions and validation - Update camera configuration and color detection - Add new components for Help, Profile, Settings, and Recent Entries - Fix ESLint warnings and improve code organization

--- a/gate-out/.env.example
+++ b/gate-out/.env.example
@@ -9,7 +9,7 @@ REACT_APP_GATE_TYPE="EXIT"
 
 # Hardware Configuration
 # Printer Settings
-REACT_APP_PRINTER_NAME="TM-T88V"
+REACT_APP_PRINTER_NAME="TM-T82X"
 REACT_APP_PRINTER_TYPE="USB"
 REACT_APP_PRINTER_WIDTH=80
 REACT_APP_PRINTER_DPI=200
