--- a/gate-in/package.json
+++ b/gate-in/package.json
@@ -12,12 +12,16 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.82",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@types/react-webcam": "^3.0.0",
     "axios": "^1.6.7",
     "date-fns": "^2.30.0",
+    "jsbarcode": "^3.11.6",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
+    "react-barcode": "^1.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
