--- a/gate-out/package.json
+++ b/gate-out/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.16.14",
     "@mui/material": "^5.16.14",
+    "@mui/x-date-pickers": "^7.27.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +15,7 @@
     "@types/node": "^16.18.82",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.1",
