--- a/gate-in/package.json
+++ b/gate-in/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@types/react-webcam": "^3.0.0",
+    "abort-controller": "^3.0.0",
     "axios": "^1.6.7",
     "date-fns": "^2.30.0",
     "jsbarcode": "^3.11.6",
